--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -120,9 +120,9 @@
     <ul class='item-lists'>
       <% @items.each do |item| %>
       <li class='list'>
-        <%= link_to "#" do %>
+       <%= link_to item_path(item) do%>
         <div class='item-img-content'>
-          <%= image_tag item.image, class: "item-img" %>
+          <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
           <%# 商品購入機能実装後に実装 %>
           <%# <% if @items.empty? %>
