--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,15 +7,13 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image, class:"item-box-img" if @item.image.attached? %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%# 商品購入機能実装後に実装 %>
-      <%# <% if @items.empty? %>
+
+      <% if @item.purchase.present? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-      <%# <% end %>
-      <%# //商品購入機能実装後に実装 %>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <% end %>
+ 
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -26,7 +24,7 @@
       </span>
     </div>
 
-    <% if user_signed_in? && @item.present? %>
+    <% if user_signed_in? && @item.purchase.present? == false %>
       <% if current_user.id == @item.user_id %>
         <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
