--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -6,7 +6,7 @@
       購入内容の確認
     </h1>
      <div class='buy-item-info'>
-      <%= image_tag @item.image, class: 'buy-item-img' if @item.image.attached? %>
+      <%= image_tag @item.image, class: 'buy-item-img' %>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
           <%= @item.product_name %>
