--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -19,7 +19,7 @@
         <p>
           クリックしてファイルをアップロード
         </p>
-        <%= f.file_field :image, id:"item-image" %>
+        <%= f.file_field :images, id:"item-images", name: 'item[images][]', data: {index: 0} %>
       </div>
     </div>
 
