--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,8 +6,14 @@
       <%= @item.product_name %>
     </h2>
     <div class="item-img-content">
-      <%= image_tag @item.image, class:"item-box-img" if @item.image.attached? %>
-
+      <%= image_tag @item.images[0], class:"item-box-img" if @item.image.attached? %>
+      <div class="other-images">
+        <% @item.images[1..-1].each do |image| %>
+          <div class="other-image">
+            <%= image_tag image %>
+          </div>
+        <% end %>
+      </div>
       <% if @item.purchase.present? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
