--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -113,6 +113,21 @@ img {
   width: 200px;
 }
 
+#previews {
+  display: flex;
+}
+
+.preview {
+  margin-right: 30px;
+}
+
+.image-delete-button {
+  text-align: center;
+  border: solid 1px;
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
 /* /商品画像 */
 
 /* 商品名と商品説明 */
