商品出品画面プレビュー画像調整

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,7 +6,7 @@
       <%= @item.product_name %>
     </h2>
     <div class="item-img-content">
-      <%= image_tag @item.images[0], class:"item-box-img" if @item.image.attached? %>
+      <%= image_tag @item.images[0], class:"item-box-img" if @item.images.attached? %>
       <div class="other-images">
         <% @item.images[1..-1].each do |image| %>
           <div class="other-image">
