--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -83,6 +83,7 @@
 .click-upload {
   margin: 15px 0;
   min-width: 250px;
+  position: relative;
 }
 
 .click-upload>p {
@@ -92,14 +93,6 @@
 img {
   max-width: 100%;
   height: auto;
-}
-
-.other-images {
-  display: flex;
-}
-
-.other-image {
-  margin-right: 10px;
 }
 
 .image-delete-button {
@@ -115,16 +108,46 @@ img {
 
 #previews {
   display: flex;
+  margin-bottom: 30px;
+ 
 }
 
 .preview {
-  margin-right: 30px;
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  width: 100px;
+  height: 120px;
+  overflow: hidden;
+
+  /* 以下、元々のcssのため、一応残す */
+  /* margin-right: 30px; */
+  /* height: 100px; */
+  /* width: 100px; */
+  
+}
+
+.preview-image {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 70%;
+  margin: auto;
+  padding-bottom: 10px;
+  object-fit: contain;
+  
+  /* 以下、元々のcssのため、一応残す */
+  /* object-fit: cover */
+  /* height: 100%; */
+  /* width: 100%; */
 }
 
 .image-delete-button {
   text-align: center;
   border: solid 1px;
   cursor: pointer;
+  margin-top: 80px;
   margin-bottom: 5px;
 }
 
