--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -33,6 +33,17 @@
   object-fit: contain;
 }
 
+.other-images {
+  display: flex;
+  justify-content: space-around;
+}
+
+.other-image {
+  margin-right: 10px;
+  height: 80px;
+  width: 80px;
+}
+
 .item-price-box {
   margin: 25px 0px;
   display: flex;
