--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -13,12 +13,10 @@
       <div class="weight-bold-text">
         商品画像
         <span class="indispensable">必須</span>
+        <span>「ファイルを選択」をクリックしてファイルをアップロード</span>
       </div>
       <div class="click-upload">
-      <div id="previews"></div>
-        <p>
-          クリックしてファイルをアップロード
-        </p>
+        <div id="previews"></div>
         <%= f.file_field :images, id:"item-images", name: 'item[images][]', data: {index: 0} %>
       </div>
     </div>
