投稿画像のサイズ調整

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -5,9 +5,17 @@
     <h1 class='transaction-title-text'>
       購入内容の確認
     </h1>
+     <%= image_tag @item.images[0], class:"item-box-img" if @item.images.attached? %>
      <div class='buy-item-info'>
-      <%= image_tag @item.image, class: 'buy-item-img' %>
-      <div class='buy-item-right-content'>
+    
+      <div class="other-images">
+        <% @item.images[1..-1].each do |image| %>
+          <div class="other-image">
+            <%= image_tag image %>
+          </div>
+        <% end %>
+      </div>
+
         <h2 class='buy-item-text'>
           <%= @item.product_name %>
         </h2>
@@ -17,6 +25,7 @@
         </div>
       </div>
     </div>
+  </div>
 
   
     <div class='item-payment'>
