--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -25,10 +25,13 @@
   font-size: 25px;
 }
 
+.item-img-content {
+  text-align: center;
+}
+
 .item-box-img {
   height: 50vh;
   width: 60vw;
-  min-height: 500px;
   background-color: rgb(205, 202, 202);
   object-fit: contain;
 }
