--- a/app/assets/stylesheets/purchases/index.css
+++ b/app/assets/stylesheets/purchases/index.css
@@ -10,6 +10,7 @@
   width: 70vw;
   min-width: 450px;
   padding: 10vh 10vw;
+  text-align: center;
 }
 
 .transaction-title-text {
@@ -21,19 +22,37 @@
 
 /* 購入内容の表示 */
 .buy-item-info {
-  height: 150px;
+  height: 200px;
   border-bottom: 2px solid #f5f5f5;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+
+
 }
 
-.buy-item-img {
-  margin-right: 20px;
+.item-box-img {
+  margin: 0 auto;
   height: 130px;
   width: 250px;
   object-fit: contain;
 }
+
+
+.other-images {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+
+.other-image {
+  margin-right: 10px;
+  height: 80px;
+  width: 80px;
+}
+
+
 
 .buy-item-right-content {
   display: flex;
@@ -124,6 +143,9 @@
   line-height: 45px;
   text-align: center;
 }
+
+
+
 
 /* /カード情報の入力 */
 
